Closed
Bug 1865868
Opened 2 years ago
Closed 2 years ago
Make top-level initial about:blank document transparent.
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
122 Branch
People
(Reporter: emilio, Assigned: emilio)
References
Details
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
This fixes the flash mentioned in bug 1858405 comment 6.
| Assignee | ||
Comment 1•2 years ago
|
||
This fixes the flash mentioned in bug 1858405 comment 6.
I don't think this is realistically testable tho, since this is only for
non-content-accessible, temporary documents (if you load about:blank
directly that's not an initial doc).
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/430c26ae0715
Make top-level initial about:blank document transparent. r=jwatt
Updated•2 years ago
|
Component: Private Browsing → Layout
Product: Firefox → Core
Comment 3•2 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 2 years ago
status-firefox122:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 122 Branch
Comment 4•2 years ago
|
||
Sounds like this is needed if we want to uplift bug 1858405 to Beta. Can you please nominate for Beta approval if you're OK with that, Emilio? Thanks!
Flags: needinfo?(emilio)
| Assignee | ||
Comment 5•2 years ago
|
||
Comment on attachment 9364766 [details]
Bug 1865868 - Make top-level initial about:blank document transparent. r=#layout
Beta/Release Uplift Approval Request
- User impact if declined: see comment 0
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: nonw
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Relatively simple tweak.
- String changes made/needed: none
- Is Android affected?: Yes
Flags: needinfo?(emilio)
Attachment #9364766 -
Flags: approval-mozilla-beta?
Comment 6•2 years ago
|
||
Comment on attachment 9364766 [details]
Bug 1865868 - Make top-level initial about:blank document transparent. r=#layout
Approved for 121.0b9.
Attachment #9364766 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Updated•2 years ago
|
status-firefox121:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•